# portfolio

./: .buildpacks  .dockerignore  .gitignore  .slugignore  Cargo.toml  Dockerfile  Dockerfile.local  Makefile  Procfile  README.md  docker-compose.yaml  dummy.rs  logs.txt  todo.md
.github/workflows/: test.yaml
api/: Cargo.toml
api/src/: main.rs
config/: Default.yml  Dev.yml  Prod.yml
pterm/: Cargo.toml
pterm/src/: app.rs  content.rs  io.rs  lib.rs  local.rs  term.rs  utils.rs
pterm/src/sections/: downloads.rs  intro.rs  mod.rs  resume.rs
src/: conn.rs  ctx.rs  handlers.rs  main.rs  settings.rs  utils.rs  ws.rs
src/messages/: handlers.rs  mod.rs  request.rs  response.rs
src/routes/: about.rs  health.rs  home.rs  mod.rs  static_files.rs  treasure.rs  user.rs  ws.rs
src/socket/: constants.rs  event.rs  message.rs  mod.rs  ws.rs
src/websocket/: constants.rs  mod.rs  response.rs  server.rs  socket.rs
static/assets/css/: main.css
static/assets/files/: faux_http_logs.txt  files.txt  george.txt  henry.txt  intro.txt  intro_interludes.txt  logs.txt  sources.txt
static/assets/files/hints/: hint_1.txt
static/assets/files/publications/: books.txt  features.txt
static/assets/files/resume/: awards.txt  education.txt  experience.txt  full.txt  languages.txt  technologies.txt
static/css/: main.css
static/js/: treasure.js
static/root/: index.html
static/templates/: about.html  error.html  index.html  treasure.html  user.html
web/: package-lock.json  package.json  spack.config.js  wasm_env.sh  webpack.config.js  webpack.docker.js
web/pterm/: Cargo.toml
web/pterm/src/: app.rs  content.rs  io.rs  lib.rs  main.rs  term.rs  utils.rs
web/pterm/src/sections/: botnet.rs  intro.rs  mod.rs
web/scss/: style.scss
web/scss/elements/: images.scss  page.scss
web/src/: colors.js  common.js  faux_logs.js  main.js  terminal.js
