[package]
name = "portfolio"
version = "0.1.0"
authors = ["kathleenfrench <kfrench09@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.10"
actix-codec = "0.3"
actix-cors = "0.5"
actix-files = "0.3"
actix-http = "2"
actix-rt = "1.1.1"
actix-session = "0.4"
actix-web = { version = "3", features = ["openssl"] }
actix-web-actors = "3"
awc = "2"
config = "0.10"
env_logger = "0.7"
futures = "0.3.1"
handlebars = { version = "3.0.0", features = ["dir_source"] }
lazy_static = "1.4"
listenfd = "0.3"
openssl = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3.7"