[package]
name = "portfolio"
version = "0.1.0"
authors = ["kathleenfrench <kfrench09@gmail.com>"]
edition = "2021"

[[bin]]
name = "portfolio"
path = "src/main.rs"

[workspace]
exclude = ["web/pterm"]

[dependencies]
actix = "0.13"
actix-codec = "0.3"
actix-cors = "0.5"
actix-files = "0.3"
actix-http = "2"
actix-rt = "1.1.1"
actix-session = "0.4"
actix-web = { version = "3" }
actix-web-actors = "3"
colored = "2"
config = "0.10"
env_logger = "0.7"
handlebars = { version = "3.0.0", features = ["dir_source"] }
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3.7"

[dev-dependencies]
linked-hash-map = "0.5.3"
crossbeam-utils = "0.8.7"
tokio = "1.8.4"