[package]
name = "pterm"
version = "0.1.0"
authors = ["kathleenfrench <kfrench09@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1"
ansi_term = "0.12"
chrono = { version = "0.4", features = ["wasmbind"] }
colored = "2"
console_error_panic_hook = "0.1"
fake = { version = "2.2", features = ["wasm-bindgen", "chrono"] }
futures = "0.3"
humansize = "1"
humantime = "2"
instant = { version = "0.1", features = ["now", "wasm-bindgen"] }
js-sys = "0.3.39"
lazy_static = "1.4"
progress_string = "0.1"
rand = { version = "0.7.0", features = ["wasm-bindgen"] }
rand_distr = "0.3.0"
regex = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.2"
wasm-bindgen = "0.2.69"
wasm-bindgen-futures = "0.4"
# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }
yansi = "0.5"
xterm-js-rs = { version = "0.1.1", features = ["xterm-addon-fit"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-std = { version = "1.8", features = ["attributes"] }
ctrlc = { version = "3.1", features = ["termination"] }
structopt = "0.3"
term_size = "1.0.0-beta1"

[dependencies.web-sys]
features = [
  "console",
  "CssStyleDeclaration",
  "Document",
  "Element",
  "EventTarget",
  "HtmlDivElement",
  "HtmlElement",
  "Location", 
  "MessageEvent",
  "Node",
  "Storage",
  "Window", 
]
version = "0.3.46"